--- a/styles/m2l.css
+++ b/styles/m2l.css
@@ -332,3 +332,31 @@ a.anchor {
 	font-weight: bold;
 	color: red;
 }
+
+/*
+style de la vue formations
+*/
+
+.center-div {
+	position: absolute;
+     margin: auto;
+     top: 0;
+     right: 0;
+     bottom: 0;
+     left: 0;
+     width: 70%;
+     height: 50%;
+     background-color: #ccc;
+		 border-radius: 15px;
+}
+
+.center-div .btnFormation {
+	display:block;
+	width:150px;
+	line-height:50px;
+	text-align:center;
+	vertical-align:middle;
+	text-decoration:none;
+	background-color: #1dcb32;
+	margin: 15px;
+}
