--- a/styles/m2l.css
+++ b/styles/m2l.css
@@ -425,17 +425,23 @@ Vue ligues
 style de la vue ligue
 */
 .Ligue{
-	float: left;
+	float:left;
 	margin: 2%;
 	background-color: #33acf1;
 	border-radius: 15px;
 	box-shadow: 3px 3px 3px #000;
+	padding: 1%;
 }
 
 .FormLigueClub{
-	float: left;
+	display: inline-block;
 	margin: 2%;
-	background-color: #grey;
+	background-color: #black;
 	border-radius: 15px;
 	box-shadow: 3px 3px 3px #000;
+	padding: 1%;
+}
+
+.ligne{
+	margin-top: 2%;
 }
